update JGAA Template

--- a/Journal of Graph Algorithms and Applications/example/example-biblio.bib
+++ b/Journal of Graph Algorithms and Applications/example/example-biblio.bib
@@ -1,26 +1,41 @@
 @article{g-fpc-01,
- author =      "A. Genius",
- title =       "First paper cited",
- journal =     "Journal of Something",
- volume =      "10",
+ author =      {A. Genius},
+ title =       {First paper cited},
+ journal =     {Journal of Something},
+ volume =      {10},
  year =        2001,
- pages =       "371-378"
+ pages =       {371-378},
+ doi =		   {000.xxx.000/000.x}
 }
 
 @article{g-spc-03,
- author =      "A. Normal",
- title =       "Second paper cited",
- journal =     "Journal of Something Else",
- volume =      "11",
+ author =      {A. Normal},
+ title =       {Second paper cited},
+ journal =     {Journal of Something Else},
+ volume =      {11},
  year =        2003,
- pages =       "234-567"
+ pages =       {234-567},
+ doi =		   {000.yyy.000/000.y}
 }
 
 @article{g-tpc-99,
- author =      "A. Person",
- title =       "Third paper cited",
- journal =     "Journal of Nothing",
- volume =      "9",
+ author =      {A. Person},
+ title =       {Third paper cited},
+ journal =     {Journal of Nothing},
+ volume =      {9},
  year =        1999,
- pages =       "89-10"
+ pages =       {89-10},
+ doi =		   {000.zzz.000/000.z}
 }
+
+
+@inproceedings{uaaa-pvvbpan-00,
+	author =      {Uthor, First A. and Author, Secon D. and Author, Third  and  Author, Fourth C. O.},
+	editor = 	  {A. Editor},
+	title =       {Preliminary version of a Very Beautiful Paper about Nothing},
+	booktitle =   {Conference of Something},
+	year =        {2000},
+	doi =      {000.xxx.000/000.x},
+
+}
+
