--- a/Journal of Graph Algorithms and Applications/example/example.tex
+++ b/Journal of Graph Algorithms and Applications/example/example.tex
@@ -5,6 +5,8 @@
 \usepackage{amssymb}
 
 \begin{document}
+
+\doi{10.7155/jgaa.00xxx}
 % --------------------------------------------------------------------
 \Issue{0}{0}{0}{0}{0} % volume, number, start page, end page, year
 % --------------------------------------------------------------------
@@ -12,12 +14,12 @@
 \HeadingTitle{A Very Beautiful Paper...} % short title for header
 % --------------------------------------------------------------------
 \title{A Very Beautiful Paper about Nothing}
-\Ack{Research supported by Grant xxxx-xxxx-xxxx}
+\Ack{Research supported by Grant xxxx-xxxx-xxxx. A preliminary version of this paper appeared in~\cite{uaaa-pvvbpan-00}}
 % --------------------------------------------------------------------
 
 \author[first,second,third]{First A. Uthor}{uthor@some.university.edu}
-\author[first]{Secon D. Author}{author@some.university.edu}
-\author[first]{Third Author}{third@some.university.edu}
+\authorOrcid[first]{Secon D. Author}{author@some.university.edu}{xxxx-xxxx-xxxx-xxxx}
+\authorB[first]{Third Author}{third@some.university.edu}
 \author[second,third]{Fourth C. O. Author}{fourth@another.univ.edu}
 
 
@@ -26,7 +28,7 @@ Some University, Somewhere}
 
 \affiliation[second]{Another Department, Another University, Somewhere else}
 
-\affiliation[third]{Third Department ,\\ University of Some Place, Some Place}
+\affiliation[third]{Third Department,\\ University of Some Place, Some Place}
 
 %% --------------------------------------------------------------------
 \submitted{January 2008}%
@@ -44,41 +46,30 @@ Some University, Somewhere}
 \maketitle
 
 \begin{abstract}
-This is the abstract of the paper. This is the abstract of the paper. This is the abstract of the paper. This is the abstract of the paper. This is
-the abstract of the paper. This is the abstract of the paper. This is the abstract of the paper. This is the abstract of the paper. This is the
-abstract of the paper. This is the abstract of the paper. This is the abstract of the paper. This is the abstract of the paper. This is the abstract
-of the paper. This is the abstract of the paper. This is the abstract of the paper. This is the abstract of the paper. This is the abstract of the
-paper. This is the abstract of the paper. This is the abstract of the paper.
+This is the abstract of the paper.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin lacus eu libero ornare eleifend. Aliquam id convallis nulla, tincidunt ultrices nibh. Suspendisse volutpat eleifend est, sed condimentum sapien laoreet pulvinar. Donec cursus volutpat ex quis dignissim. Pellentesque felis augue, porta et iaculis eu, faucibus in lectus. Praesent vitae placerat ante. Vivamus ultrices consequat facilisis. Suspendisse rhoncus malesuada nibh quis feugiat. Pellentesque auctor sem vel porttitor bibendum. Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum mollis porta eros eget ultrices. Mauris tempor tortor lectus, sed ultricies ante rutrum sed. Aliquam eu orci non nibh facilisis tincidunt. Vestibulum elementum metus nisl, quis elementum orci molestie id. Integer eu orci vestibulum, efficitur lacus vel, tincidunt quam.
+
+Nam congue nisi sed erat elementum rhoncus. Mauris fringilla sapien at maximus scelerisque. Proin a elementum tortor. Sed nec efficitur velit. Pellentesque dignissim ipsum magna, eu aliquam ligula rutrum non. Ut imperdiet erat porta lorem aliquam, id dictum justo posuere. Integer ultricies dictum nulla. Cras eget rhoncus libero. 
 \end{abstract}
-
-% --------------------------------------------------------------------
-\Body % body of paper begins here
-% --------------------------------------------------------------------
-
 
 
 \section{Introduction}\label{se:intro}
 
-Text of your paper goes here. Text of your paper goes here.Text of your paper goes here.Text of your paper goes here.Text of your paper goes
-here.Text of your paper goes here.Text of your paper goes here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes
-here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes
-here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes
-here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes
-here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes
-here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes here. Text of your paper goes
-here.
+Text of your paper goes here.  Nam congue nisi sed erat elementum rhoncus. Mauris fringilla sapien at maximus scelerisque. Proin a elementum tortor. Sed nec efficitur velit. Pellentesque dignissim ipsum magna, eu aliquam ligula rutrum non. Ut imperdiet erat porta lorem aliquam, id dictum justo posuere. Integer ultricies dictum nulla. Cras eget rhoncus libero.
+
+Sed nec libero in eros lacinia rutrum ac nec nisi. Duis aliquam nisl et quam molestie, a egestas neque sollicitudin. Phasellus quis mauris lobortis, vehicula turpis et, dapibus turpis. Cras blandit mattis sapien non maximus. Praesent efficitur tristique vestibulum. Curabitur bibendum enim id libero vestibulum, ut pellentesque elit commodo. Nulla sagittis, quam in commodo vulputate, eros sapien luctus elit, sit amet suscipit ante augue id ipsum. Mauris placerat sem sit amet lectus ornare, vitae auctor tellus dapibus.
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dui nisi, pharetra nec ipsum eu, dictum finibus sapien. Nulla scelerisque consectetur placerat. Vivamus hendrerit malesuada quam in venenatis. Nunc luctus magna ut ultrices pharetra. Quisque vel venenatis odio. Praesent nec faucibus odio, congue ornare libero. Etiam mauris ipsum, porttitor pellentesque arcu vitae, scelerisque dignissim urna. Donec tincidunt odio risus, vitae porta quam tempus vitae. Morbi vehicula elementum laoreet. Donec scelerisque augue in vestibulum congue.
 
 \begin{figure}[htbp]
-\begin{center}
-\includegraphics[width=4cm]{figures/figure1}
-\end{center}
-\caption{This is a figure.}
+	\begin{center}
+		\includegraphics[width=4cm]{figures/figure1}
+	\end{center}
+	\caption{This is a figure.}
 \end{figure}
 
-This is a citation~\cite{g-fpc-01}. This is another citation~\cite{g-spc-03}. This is a third citation~\cite{g-tpc-99}. This is a
-citation~\cite{g-fpc-01}. This is another citation~\cite{g-spc-03}. This is a third citation~\cite{g-tpc-99}. This is a citation~\cite{g-fpc-01}.
-This is another citation~\cite{g-spc-03}. This is a third citation~\cite{g-tpc-99}. This is a citation~\cite{g-fpc-01}. This is another
-citation~\cite{g-spc-03}. This is a third citation~\cite{g-tpc-99}.
+Vivamus ipsum mauris, eleifend a cursus at, tristique nec dui. Aenean quis leo dapibus, hendrerit arcu in, auctor felis. Donec ut ornare tortor, id venenatis odio. Etiam congue quis ante in aliquam. Duis quis viverra turpis, tempus pretium sem. Vivamus semper libero sit amet eleifend ullamcorper. Aenean eu imperdiet ipsum. Morbi auctor augue sed volutpat sagittis. Phasellus viverra dapibus tellus, non rhoncus velit rutrum vitae. Morbi volutpat scelerisque turpis vitae ultrices. Integer ornare eros mauris, molestie faucibus lorem viverra sed. Sed euismod justo nec blandit aliquam. Ut at tellus consectetur, ullamcorper risus sit amet, consequat sapien. Vivamus ante felis, viverra lobortis egestas nec, vehicula at leo. Maecenas lorem tellus, faucibus id accumsan ac, scelerisque ac dui. Praesent tristique eros sed congue finibus. 
+
+This is a citation~\cite{g-fpc-01}. This is another citation~\cite{g-spc-03}. This is a third citation~\cite{g-tpc-99}. 
 
 
 
@@ -86,11 +77,9 @@ citation~\cite{g-spc-03}. This is a third citation~\cite{g-tpc-99}.
 
 The authors wish to thank A. Friend for the interesting discussions.
 
-
-\clearpage
-
+\bibliographystyle{abbrvurl}
 \bibliography{example-biblio}
-\bibliographystyle{abbrv}
+
 
 
 \end{document}
