--- a/Journal of Graph Algorithms and Applications/jgaa-art/jgaa-art.cls
+++ b/Journal of Graph Algorithms and Applications/jgaa-art/jgaa-art.cls
@@ -1,4 +1,4 @@
-% jgaa-art.cls version 1, 11/2008
+% jgaa-art.cls version 5, 01/2021
 %
 % LaTeX class for articles published in the Journal of Graph
 % Algorithms and Applications, http://jgaa.info
@@ -7,24 +7,53 @@
 
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{jgaa-art}[2008/11/01 v1.0 LaTeX class for the Journal of Graph Algorithms and Applications]
-
-\DeclareOption*{%
-\PassOptionsToClass{\CurrentOption}{article}%
-}
-
-\ProcessOptions\relax
+\ProvidesClass{jgaa-art}[2021/01/07 v5.0 LaTeX class for the Journal of Graph Algorithms and Applications]
 
 \LoadClass[twoside]{article}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%
+%                   %
+% Required packages %
+%                   %  
+%%%%%%%%%%%%%%%%%%%%%
 
 \RequirePackage{hyperref}
 \RequirePackage{fancyhdr}
 \RequirePackage{graphicx}
+\RequirePackage{setspace}
+\RequirePackage{geometry}
+\RequirePackage{xcolor}
 
-\setlength{\oddsidemargin}{62pt}
-\setlength{\evensidemargin}{62pt}
-\setlength{\marginparwidth}{65pt}
+%%%%%%%%%%%%%%%%%%%%%
+%                   %
+%    Page layout    %
+%                   %  
+%%%%%%%%%%%%%%%%%%%%%
+\geometry{text={15cm,20cm},centering}
 
+
+%%%%%%%%%%%%%%%%%%%%%
+%                   %
+%     Link setup    %
+%                   %  
+%%%%%%%%%%%%%%%%%%%%%
+\definecolor{lipicsblue}{rgb}{0.08235294118,0.3098039216,0.537254902}
+\hypersetup{colorlinks,
+	breaklinks,
+	colorlinks=true,
+	urlcolor=lipicsblue,
+	citecolor=lipicsblue,
+	linkcolor=lipicsblue
+}
+
+
+%%%%%%%%%%%%%%%%%%%%%
+%                   %
+% First page header %
+%                   %  
+%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\ShortIssueNo}{vol.\ 0, no.\ 0, 0000}
 \newcommand{\IssueNo}{vol.\ 0, no.\ 0, 0000}
 \newcommand{\Issue}[5]{%
@@ -36,13 +65,25 @@
     \parbox{1.4in}{ \includegraphics[scale=0.2]{cube-spread} }
     \parbox{3.25in}{%
       {\large\sf Journal of Graph Algorithms and Applications} \\
-      {\normalsize\sf http://jgaa.info/} {\normalsize\IssueNo}
+      {\normalsize\sf http://jgaa.info/} {\normalsize\IssueNo} \\
+      {\footnotesize \sf \href{http://dx.doi.org/\DOIInfo}{DOI: \DOIInfo}} 
     }
   \end{center}
   \hrule
   \vspace{6pt}
   \setcounter{page}{#3}
   }
+  
+\newcommand{\DOIInfo}{}
+\newcommand{\doi}[1]{\renewcommand{\DOIInfo}{#1}}  
+  
+  
+%%%%%%%%%%%%%%%%%%%%%%%
+%                     %
+% Headers and Footers %
+%                     %  
+%%%%%%%%%%%%%%%%%%%%%%%
+  
 \newcommand{\HeadingAuthorInfo}{}
 \newcommand{\HeadingAuthor}[1]{\renewcommand{\HeadingAuthorInfo}{#1}}
 \newcommand{\HeadingTitleInfo}{}
@@ -56,6 +97,18 @@
 \renewcommand{\headrulewidth}{0.0pt}
 \renewcommand{\footrulewidth}{0.0pt}
 
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%
+%                   %
+%   Frontmatter     %
+%                   %  
+%%%%%%%%%%%%%%%%%%%%%
+
+
+% Tokens
 \newtoks\auth@toks
 \newtoks\authpdf@toks
 \newtoks\mail@toks
@@ -65,22 +118,37 @@
 \newtoks\history@toks
 \newtoks\editor@toks
 \newtoks\ack@toks
+\newtoks\issue@toks
 
-
+% counters
 \newcounter{affil@count}
 \renewcommand{\theaffil@count}{\textsuperscript{\arabic{affil@count}}}
 
 \newcounter{author@count}
 \setcounter{author@count}{0}
 
-\renewcommand{\author}[3][]{%
+\newcounter{issue@count}
+\setcounter{issue@count}{0}
+
+\newcounter{ack@count}
+\setcounter{ack@count}{0}
+
+% commands for authors
+
+% authors expansion
+\newcommand{\expauthor}[5][]{
   \if!#1!%
-    \auth@toks=\expandafter{\the\auth@toks\@author{#2}}%
+    \auth@toks=\expandafter{\the\auth@toks\@author{#4}}%
     \mail@toks=\expandafter{\the\mail@toks\@email{#2}{#3}}%
   \else%
-    \auth@toks=\expandafter{\the\auth@toks\@authoraff{#1}{#2}}%
+    \auth@toks=\expandafter{\the\auth@toks\@authoraff{#1}{#4}}%
     \mail@toks=\expandafter{\the\mail@toks\@email{#2}{#3}}%
   \fi%
+  \if!#5!
+  	{}
+  \else
+  	\auth@toks=\expandafter{\the\auth@toks\orcid{#5}}%
+  \fi
   \ifnum \value{author@count} > 0%
         \authpdf@toks=\expandafter{\the\authpdf@toks{, #2}}%
     \else%
@@ -89,6 +157,28 @@
     \stepcounter{author@count}%
 }
 
+
+% Basic author command; params: affiliation (ref), name, email
+\renewcommand{\author}[3][]{%
+	\expauthor[#1]{#2}{#3}{#2}{}%
+}
+
+% Basic author command; params: affiliation (ref), name, email, orcid
+\newcommand{\authorOrcid}[4][]{%
+	\expauthor[#1]{#2}{#3}{#2}{#4}%
+}
+
+% Basic author command; params: affiliation (ref), name, email (forces name to be on a new line)
+\newcommand{\authorB}[3][]{%
+	\expauthor[#1]{#2}{#3}{\\#2}{}%
+}
+
+% Basic author command; params: affiliation (ref), name, email, orcid (forces name to be on a new line)
+\newcommand{\authorBOrcid}[4][]{%
+	\expauthor[#1]{#2}{#3}{\\#2}{#4}%
+}
+
+% affiliation
 \newcommand{\affiliation}[2][]{%
   \ifnum\c@affil@count<0
     \ClassError{jgaa-article}{Two affiliations given without optional argument}{}%
@@ -103,6 +193,11 @@
   \fi
 }
 
+% orcid command. Small icon close to the name
+\newcommand{\orcid}[1]{\href{https://orcid.org/#1}{\protect\includegraphics[scale=0.45]{orcid}}{}}
+
+
+% title, author and affiliation formatting commands
 \renewcommand{\title}[1]{
   \title@toks=\expandafter{\the\title@toks\@title{#1}}
   \titlepdf@toks={#1}
@@ -110,16 +205,16 @@
 
 \renewcommand{\@title}[1]{
     \begin{center}
-        \Large\bf \par#1
+        \Large\bf #1
     \end{center}
     }    
 
 \renewcommand{\@author}[1]{
-    {\large{\emph{#1}}}
+    {{\large \emph{#1}}}
 }
   
 \newcommand{\@authoraff}[2]{
-    {\large{\emph{#2$\,$}}\formataffilmark{#1}}
+    {{\large \emph{#2$\,$}}\formataffilmark{#1}}
 }
 
 \newcommand\@marksep{,}
@@ -137,7 +232,11 @@
 \def\@refsepinit{\let\@marksep\displaysep}
 
 \newcommand{\@email}[2]{
-    \footnotesize{\href{mailto:#2}{\textsf{#2}} (#1)}
+	\if!#2!%
+		{}
+	\else%
+    	\footnotesize{\href{mailto:#2}{\textsf{#2}} (#1)}%
+    \fi
 }
 
 \newcommand{\@oneaffil}[1]{
@@ -150,9 +249,12 @@
   {\par\ref{#1}#2}%
 }%
 
+
+% counter for history
 \newcounter{history@count}
 \setcounter{history@count}{0}
 
+% history commands
 \newcommand{\submitted}[1]{
         \stepcounter{history@count}%
         \history@toks=\expandafter{\the\history@toks\@history{Submitted}{#1}}%
@@ -193,17 +295,18 @@
         \editor@toks=\expandafter{\the\editor@toks\@editor{Communicated by}{#1}}%
 }
 
-\newcommand{\historysize}{\fontsize{8}{9.5}\selectfont}
-
 \newcommand{\@history}[2]{
-\parbox[c][0.7cm]{2.2cm}{\begin{center}\historysize{\textsf{#1: }\par #2}\end{center}}
+\parbox[c][0.7cm]{3.5cm}{\begin{center}\footnotesize{\textsf{#1: } #2}\end{center}}
 }
 
 \newcommand{\@editor}[2]{
-\parbox[c][0.7cm]{5cm}{\begin{center}\historysize{\textsf{#1: }\par #2}\end{center}}
+\parbox[c][0.7cm]{5.5cm}{\begin{center}\footnotesize{\textsf{#1: } #2}\end{center}}
 }
 
+
+% commands for Ack
 \newcommand{\Ack}[1]{%
+	\stepcounter{ack@count}
     \ack@toks=\expandafter{\the\ack@toks\@ack{#1}}%
 }%
 
@@ -211,6 +314,18 @@
     {\footnotesize{#1}}%
 }%
 
+% commands for special issue
+\newcommand{\issue}[1]{%
+	\stepcounter{issue@count}
+	\issue@toks=\expandafter{\the\issue@toks\@issue{#1}}%
+}%
+
+\newcommand{\@issue}[1]{%
+	{\footnotesize{#1}}%
+}%
+
+
+% frontmatter formatting commands
 \def\printauthors{\the\auth@toks}
 \def\printaffiliations{\the\affil@toks}
 \def\printtitle{\the\title@toks}
@@ -224,40 +339,69 @@
         {\footnotesize{\emph{E-mail address:}}\the\mail@toks}%
     \fi%
 }%
+\def\printissue{%
+	\footnotesize{\it \the\issue@toks}
+}%
+\def\printlicense{\footnotesize{\raisebox{-.25\height}{\includegraphics[height=15pt]{by}} This work is licensed under the terms of the \href{https://creativecommons.org/licenses/by/4.0/}{CC-BY} license.} 
+}
 
 \newcommand{\history}{
-\ifnum \value{history@count} > 0%
-    \vfill%
-    \begin{center}%
-    \fbox{\parbox{0.98\textwidth}{\centering \printhistory\\%
-    \printeditor}}%
-    \end{center}%
-\fi%
-\vfill%
-\hrule%
-\vspace{1mm}%
-\printack%
-
-\noindent\printmail%
+	\ifnum \value{history@count} > 0%
+	\begin{center}%
+		\fbox{\parbox{0.8\textwidth}{
+				\centering
+				\printhistory\\%
+				\printeditor
+			    }}%
+	\end{center}%
+	\fi%
 }%
 
-
+% maketitle
 \renewcommand{\maketitle}{%
 \hypersetup{pdftitle=\the\titlepdf@toks,pdfauthor=\the\authpdf@toks}
+\thispagestyle{empty} %
+\pagestyle{fancy}%
 \printtitle%
 \begin{center}%
+\begin{spacing}{1.1}
 \printauthors%
-\vspace{5mm}%
+\end{spacing}
+\vspace{2mm}%
 \printaffiliations%
-\vspace{5mm}%
+%\vspace{5mm}%
 \end{center}%
+\history%
+\makeatletter{\renewcommand*{\@makefnmark}{}
+	\footnotetext{
+		\ifnum \value{issue@count} > 0%
+			\printissue\par
+			\smallskip
+			\hrule
+		\fi
+		\ifnum \value{ack@count} > 0%
+			\smallskip
+			\printack\par
+			\smallskip
+		\hrule
+		\fi
+		\smallskip
+		\printmail\par
+		\smallskip
+		\hrule
+		\smallskip
+		\printlicense
+	}
+\makeatother}
 }%
-  
-\newcommand{\Body}{%
-    \history%
-    \thispagestyle{empty} %
-    \clearpage\pagestyle{fancy}%
-}%
+
+\renewenvironment{abstract}{\begin{quotation}\textbf{Abstract.}}{\end{quotation}}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                        %
+%   Theorems and proofs environments     %
+%                                        %  
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   
 \newtheorem{lemma}{Lemma}
 \newtheorem{theorem}{Theorem}
