--- a/Journal of Graph Algorithms and Applications/template/template.tex
+++ b/Journal of Graph Algorithms and Applications/template/template.tex
@@ -6,6 +6,8 @@
 
 \begin{document}
 % --------------------------------------------------------------------
+\doi{} % doi number
+% --------------------------------------------------------------------
 \Issue{0}{0}{0}{0}{0} % volume, number, start page, end page, year
 % --------------------------------------------------------------------
 \HeadingAuthor{} % short list of authors for header
@@ -46,10 +48,6 @@
 \begin{abstract}
 \end{abstract}
 
-% --------------------------------------------------------------------
-\Body % body of paper begins here
-% --------------------------------------------------------------------
-
 % The content of the paper goes here
 
 \section{}
@@ -63,9 +61,6 @@
 %% --------------------------------------------------------------------
 %       Bibliography
 %% --------------------------------------------------------------------
-
-
-\clearpage
 
 \bibliography{}
 \bibliographystyle{abbrv}
